Update code and .env file to support environment variables, and update required versions

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-GPD_CID=<ID goes here>
-GPD_SECRET=<Secret goes here>
-GPD_AGENT=<python:(name):(version) (by (author))>
-GPD_USER=<bot username>
-GPD_PASSWORD=<bot password>
+praw_client_id=<ID goes here>
+praw_secret=<Secret goes here>
+praw_user_agent=<python:(name):(version) (by (author))>
+praw_username=<bot username>
+praw_password=<bot password>
 GPD_SUBREDDIT=<subreddit>
 GPD_BLACKLISTED_DEVS=<[an_array,should,work,here]>
